--- a/index.html
+++ b/index.html
@@ -55,9 +55,90 @@
             <i class="left-menu-icon fas fa-home"></i>
             <i class="left-menu-icon fas fa-users"></i>
             <i class="left-menu-icon fas fa-bookmark"></i>
-            <i class="left-menu-icon fas fa-tv"></i>
-            <i class="left-menu-icon fas fa-hourglass-start"></i>
-            <i class="left-menu-icon fas fa-shopping-cart"></i>
+            <i class="left-menu-icon fas fa-tv"></i> <i class="left-menu-icon fas fa-hourglass-start"></i> <i class="left-menu-icon fas fa-shopping-cart"></i>
+        </div>
+        <div class="container">
+            <div class="content-container">
+                <div
+                    class="feature-content"
+                    style="
+                        background: linear-gradient(
+                                to bottom,
+                                rgba(0, 0, 0, 0),
+                                #151515
+                            ),
+                            url('img/f-1.jpg');
+                    "
+                >
+                    <img class="feature-title" src="img/f-t-1.png" alt="" />
+                    <p class="feature-desc">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Animi earum molestias officia voluptas. Tempore,
+                        molestias. Inventore quae cupiditate aliquid
+                        reprehenderit exercitationem eos assumenda ut
+                        accusantium fuga distinctio deleniti iure animi odit
+                        ullam quaerat excepturi harum deserunt a, officia
+                        adipisci. Quos?
+                    </p>
+                    <button class="feature-button">WATCH</button>
+                </div>
+                <div class="movie-list-container">
+                    <h1 class="movie-list-title">NEW RELEASES</h1>
+                    <div class="movie-list-wrapper">
+                        <div class="movie-list">
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                        </div>
+                        <i class="fas fa-chevron-right arrow"></i>
+                    </div>
+                </div>
         </div>
     </body>
 </html>
