Se agrega slider

--- a/index.html
+++ b/index.html
@@ -94,42 +94,84 @@
                                <button class="movie-list-item-button">WATCH</button> 
                             </div>
                             <div class="movie-list-item">
-                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <img class="movie-list-item-img" src="img/2.jpeg" alt="">
                                 <span class="movie-list-item-title">Her</span>
                                 <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
                                 </p>
                                <button class="movie-list-item-button">WATCH</button> 
                             </div>
                             <div class="movie-list-item">
-                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <img class="movie-list-item-img" src="img/3.jpg" alt="">
                                 <span class="movie-list-item-title">Her</span>
                                 <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
                                 </p>
                                <button class="movie-list-item-button">WATCH</button> 
                             </div>
                             <div class="movie-list-item">
-                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <img class="movie-list-item-img" src="img/4.jpg" alt="">
                                 <span class="movie-list-item-title">Her</span>
                                 <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
                                 </p>
                                <button class="movie-list-item-button">WATCH</button> 
                             </div>
                             <div class="movie-list-item">
-                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <img class="movie-list-item-img" src="img/5.jpg" alt="">
                                 <span class="movie-list-item-title">Her</span>
                                 <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
                                 </p>
                                <button class="movie-list-item-button">WATCH</button> 
                             </div>
                             <div class="movie-list-item">
-                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <img class="movie-list-item-img" src="img/6.jpg" alt="">
                                 <span class="movie-list-item-title">Her</span>
                                 <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
                                 </p>
                                <button class="movie-list-item-button">WATCH</button> 
                             </div>
                             <div class="movie-list-item">
-                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <img class="movie-list-item-img" src="img/7.jpg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/8.jpg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/9.jpg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/10.jpg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/11.jpg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/12.jpg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/13.jpg" alt="">
                                 <span class="movie-list-item-title">Her</span>
                                 <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
                                 </p>
@@ -151,42 +193,84 @@
                                <button class="movie-list-item-button">WATCH</button> 
                             </div>
                             <div class="movie-list-item">
-                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <img class="movie-list-item-img" src="img/2.jpeg" alt="">
                                 <span class="movie-list-item-title">Her</span>
                                 <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
                                 </p>
                                <button class="movie-list-item-button">WATCH</button> 
                             </div>
                             <div class="movie-list-item">
-                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <img class="movie-list-item-img" src="img/3.jpg" alt="">
                                 <span class="movie-list-item-title">Her</span>
                                 <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
                                 </p>
                                <button class="movie-list-item-button">WATCH</button> 
                             </div>
                             <div class="movie-list-item">
-                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <img class="movie-list-item-img" src="img/4.jpg" alt="">
                                 <span class="movie-list-item-title">Her</span>
                                 <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
                                 </p>
                                <button class="movie-list-item-button">WATCH</button> 
                             </div>
                             <div class="movie-list-item">
-                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <img class="movie-list-item-img" src="img/5.jpg" alt="">
                                 <span class="movie-list-item-title">Her</span>
                                 <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
                                 </p>
                                <button class="movie-list-item-button">WATCH</button> 
                             </div>
                             <div class="movie-list-item">
-                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <img class="movie-list-item-img" src="img/6.jpg" alt="">
                                 <span class="movie-list-item-title">Her</span>
                                 <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
                                 </p>
                                <button class="movie-list-item-button">WATCH</button> 
                             </div>
                             <div class="movie-list-item">
-                                <img class="movie-list-item-img" src="img/1.jpeg" alt="">
+                                <img class="movie-list-item-img" src="img/7.jpg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/8.jpg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/9.jpg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/10.jpg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/11.jpg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/12.jpg" alt="">
+                                <span class="movie-list-item-title">Her</span>
+                                <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
+                                </p>
+                               <button class="movie-list-item-button">WATCH</button> 
+                            </div>
+                            <div class="movie-list-item">
+                                <img class="movie-list-item-img" src="img/13.jpg" alt="">
                                 <span class="movie-list-item-title">Her</span>
                                 <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae itaque est fugiat ullam illo repellat velit natus blanditiis ipsum?
                                 </p>
@@ -196,7 +280,7 @@
                         <i class="fas fa-chevron-right arrow"></i>
                     </div>
                 </div>
-                <div
+                         <div
                     class="feature-content"
                     style="
                         background: linear-gradient(
@@ -277,5 +361,6 @@
                     </div>
                 </div>
         </div>
+        <script src="index.js"></script>
     </body>
 </html>
